# gbc

./: Cargo.toml  Makefile
.github/workflows/: release.yml
src/: bus.rs  cartridge.rs  constants.rs  cpu.rs  emulator.rs  lib.rs  main.rs
src/bus/: mod.rs
src/cpu/: flag.rs  instructions.rs  mod.rs  opcode.rs  register.rs
src/platform/: mod.rs  native.rs
src/ppu/: graphics.rs  mod.rs
